--- a/site/template/checkout/checkout.html
+++ b/site/template/checkout/checkout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>购买</title>
+    <title>{$title}</title>
     <link rel="stylesheet" href="css/css.css">
     <script src="js/jquery-1.12.3.min.js"></script>
     <script>
