--- a/site/template/checkout/confirm.html
+++ b/site/template/checkout/confirm.html
@@ -7,6 +7,10 @@
     <script src="js/jquery-1.12.3.min.js"></script>
     <script>
         $(function(){
+            $(".step1").hide();
+            $(".step2").show();
+            $(".purTop li:eq(1)").addClass("active").siblings().removeClass("active");
+
             //版本切换
             $(".edition li").click(function(){
                 $(this).addClass("active").siblings().removeClass("active");
@@ -51,42 +55,7 @@
     <div class="line1"></div>
     <div class="line2"></div>
 </div>
-<div class="content step1">
-    <div class="contentTop">
-        <img src="img/car.png">
-        <p>选择购买版本、成员数量及年限</p>
-    </div>
-    <p class="businessName">企业（团队）名称：<span>{$data['companyName']}</span></p>
-    <div class="edition">
-        <p>选择版本：</p>
-        <ul>
-            <li class="active">团队版</li>
-            <li>企业版</li>
-        </ul>
-    </div>
-    <div class="memberNum">
-        <p>成员数量：</p>
-        <input type="number" value="{$data['num']}">
-        <p>人</p>
-    </div>
-    <div class="purLife">
-        <p>购买年限：</p>
-        <ul>
-            <li><input name="purLife" type="radio" id="radio1" checked><label for="radio1">1年</label></li>
-            <li><input name="purLife" type="radio" id="radio2"><label for="radio2">2年</label></li>
-            <li><input name="purLife" type="radio" id="radio3"><label for="radio3">3年</label></li>
-            <li><input name="purLife" type="radio" id="radio4"><label for="radio4">5年</label></li>
-        </ul>
-    </div>
-    <div class="price">
-        <p><span>{$data['perprice']}元</span>/人/年 * <span>{$data['num']}</span>人 * <span>{$data['year']}</span>年 = <span>{$data['total']}</span>元</p>
-        <p>购买后企业（团队）可容纳<span>{$data['num']}</span>个成员，期限为<span>{$data['yearcaptital']}</span>年，到期时间为<span>$data['expiretime']</span></p>
-    </div>
-    <div class="totalPrice">
-        <p>总计：<span>{$data['total']}</span>元</p>
-        <button></button>
-    </div>
-</div>
+
 <div class="content step2">
     <div class="contentTop">
         <img src="img/car.png">
@@ -95,11 +64,11 @@
     <div class="detailContent">
         <p><span>企业团队名称：</span><span>上海银河创意</span></p>
         <p><span>选择版本：</span><span>团队版</span></p>
-        <p><span>成员数量：</span><span>13</span></p>
-        <p><span>购买年限：</span><span>1年</span></p>
-        <p><span>总计：</span><span>16000元</span></p>
+        <p><span>成员数量：</span><span>{$data['num']}</span></p>
+        <p><span>购买年限：</span><span>{$data['years']}年</span></p>
+        <p><span>总计：</span><span>{$data['total']}元</span></p>
         <div class="actual">
-            <p><span>实付：</span><span>13000元</span></p>
+            <p><span>实付：</span><span>{$data['total']}元</span></p>
             <div class="code">
                 <input type="checkbox">
                 <span>使用推荐码</span>
@@ -110,11 +79,11 @@
     <div class="choice">
         <p>选择购买方式：</p>
         <ul>
-            <li class="active"></li>
-            <li></li>
+            <li class="active" id="zhifubao"></li>
+            <li id="weixin"></li>
         </ul>
     </div>
-    <button class="payment">立即支付</button>
+    <a href="?script=NativePay"><button class="payment">立即支付</button></a>
 </div>
 <div class="completed">
     <div class="comContent">
@@ -122,7 +91,7 @@
         <p>请先进行在线支付，如已完成支付，请点击完成。</p>
         <button class="cancel"></button>
         <ul>
-            <li>立即支付</li>
+            <li><a href="?script=NativePay">立即支付</a></li>
             <li>支付遇到问题</li>
         </ul>
     </div>
