--- a/site/template/checkout/payment.html
+++ b/site/template/checkout/payment.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 <div style="margin-left: 10px;color:#556B2F;font-size:30px;font-weight: bolder;">扫描二维码支付</div><br/>
-<img alt="扫码支付" src="site/library/wxpay/qrcode.php?data={$url}" style="width:150px;height:150px;"/>
-
+<img alt="扫码支付" src="site/library/wxpay/qrcode.php?data={$data['url']}" style="width:150px;height:150px;"/>
+<div>订单号：{$data['out_trade_no']}</div>
+<div>应付金额：{$data['total_fee']}元</div>
 </body>
 </html>
